# sg-culturepass-bookstores-changelog

./: .env.example  .gitignore  README.md  go.mod  pyproject.toml  tracker.py
.github/workflows/: track-changes.yml
cmd/tracker/: main.go
data/: bookstores.json
internal/api/: client.go
internal/changelog/: changelog.go
internal/diff/: diff.go
internal/geocode/: onemap.go
internal/models/: bookstore.go
